# Arithmetic-Expressions-Parser-And-Evaluator

./: .gitignore  CMakeLists.txt  README.md
doxygen/: Doxyfile.in
src/: CMakeLists.txt  main.cpp  main_copy.cpp
src/AST/: Node.h
src/Evaluator/: CMakeLists.txt  Evaluator.cpp  Evaluator.h
src/MathUtils/: Constants.h  MathConstants.h
src/Parser/: CMakeLists.txt  Parser.cpp  Parser.h
src/calculator/: CMakeLists.txt  Runner.cpp  Runner.hpp  State.cpp  State.hpp
src/evaluator/: CMakeLists.txt  Evaluator.cpp  Evaluator.hpp
src/mathUtils/: Constants.hpp  Methods.hpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/utils/: Methods.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  it_ArithmeticExpressionsHandling.cpp
tests/unit/: CMakeLists.txt  ut_delete.cpp
tests/unit/Evaluator/: CMakeLists.txt  ut_Evaluator.cpp
tests/unit/Parser/: CMakeLists.txt  ut_Parser.cpp
